Fixed grid overflow and resizing

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,33 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     text-align: center;
-    background-color: #ebebf0;
 }
+
+.main {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 40vw;
+    height: 40vw;
+    min-width: 100px;
+    min-height: 100px;
+    margin: 50px;
+}
+
+.box {
+    flex-shrink: 1;
+    flex-grow: 1;
+    border: 1px dotted #007aff;
+}
+
 
 h1, h2, h3, h4, h5, h6 {
     font-family: sans-serif;
@@ -17,27 +43,8 @@ h3 {
     margin-bottom: 0;
 }
 
+.controls-right,
 .controls-left {
-    margin-top: 30px;
-}
-
-.grid-container {
-    margin: 20px;
-    max-width: 75%;
-    flex: 1;
-}
-
-.flex-row {
-    margin: auto 5%;
-    display: flex;
-}
-
-.grid-item {
-    padding: 2%;
-    flex: 1 1 1;
-}
-
-.main { 
-    display: flex;
-    justify-content: space-around;
+    margin: 30px auto;
+    text-align: center;
 }
